<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gradproj.SafeSpeed.SafeSpeed" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/customborder" 
        android:visibility="gone">

        <TextView
            android:id="@+id/speedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_speed"
            android:textSize="90sp" />

        <TextView
            android:id="@+id/unitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/units"
            android:textSize="25sp" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout1"
	    android:layout_marginTop="35dp"
	    android:visibility="gone">
        
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/current_speed"
	        android:textAppearance="?android:attr/textAppearance"
	        android:textSize="16sp" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:orientation="vertical" >

        <Switch
            android:id="@+id/powerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/on_off"
            android:textOff="Off"
            android:textOn="On" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/customborder"
        android:divider="@drawable/empty_tall_divider"
        android:fitsSystemWindows="false"
        android:orientation="horizontal"
        android:showDividers="middle" >

            <ImageButton
                android:id="@+id/phoneButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/phone"
                android:scaleType="centerInside"
                android:src="@drawable/phoneicon" />

            <ImageButton
                android:id="@+id/textButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/text"
                android:scaleType="centerInside"
                android:src="@drawable/texticon" />

            <ImageButton
                android:id="@+id/emailButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/email"
                android:scaleType="centerInside"
                android:src="@drawable/emailicon" />

            <ImageButton
                android:id="@+id/contactButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".25"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/music"
                android:scaleType="centerInside"
                android:src="@drawable/contacticon" />

	</LinearLayout>
</RelativeLayout>